--- a/public/index.html
+++ b/public/index.html
@@ -20,10 +20,22 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <style type="text/css">
+      body, #root {
+        margin:0;
+        padding:0;
+        height: 100%;
+        overscroll-behavior: none;
+      }
+
+      body {
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      }
+    </style>
   </head>
-  <body style="margin:0; padding:0; height: 100%; overscroll-behavior: contain;">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" style="display: flex; height: 100%; overflow: hidden;"></div>
+    <div id="root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
