--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="loader"><h2>Loading</h2></div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
