More work on mobile view

--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,20 @@
   <meta charset="utf-8" />
   <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="64x64" href="%PUBLIC_URL%/favicon-64x64.png">
+  <link rel="icon" type="image/png" sizes="144x144" href="%PUBLIC_URL%/favicon-144x144.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="%PUBLIC_URL%/favicon-512x512.png">
   <link rel="apple-touch-icon" sizes="152x152" href="%PUBLIC_URL%/apple-touch-icon-152x152.png">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-
-  <title>earthwild.life</title>
+  <meta name="twitter:card" content="summary" />
+  <meta property="og:url" content="https://earthwild.life" />
+  <meta property="og:title" content="earthwild.life - Support the Wildlife Conservation Society" />
+  <meta property="og:image"
+    content="https://res.cloudinary.com/dfvygwmml/image/upload/w_1200,h_630,c_fill/species/gorilla-928598_1920_riqtu8" />
+  <title>earthwild.life - Support the Wildlife Conservation Society</title>
+  <meta property="og:description"
+    content="Explore the species that the Wildlife Conservation Society is working to protect." />
   <style type="text/css">
     body,
     #root {
