Adding the fb:appId

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
   <meta name="twitter:card" content="summary" />
   <meta property="og:url" content="https://earthwild.life" />
   <meta property="og:title" content="earthwild.life - Support the Wildlife Conservation Society" />
+  <meta property="fb:app_id" content="517879908949155" />
   <meta property="og:image"
     content="https://res.cloudinary.com/dfvygwmml/image/upload/w_1200,h_630,c_fill/species/gorilla-928598_1920_riqtu8" />
   <title>earthwild.life - Support the Wildlife Conservation Society</title>
@@ -34,7 +35,6 @@
     }
 
     #loader {
-      /* position: fixed; */
       left: 0px;
       top: 0px;
       bottom: 0px;
